--- a/src/main/resources/templates/presentationInfo.html
+++ b/src/main/resources/templates/presentationInfo.html
@@ -35,7 +35,7 @@
                                 </ul>
                             </div>
                             <input type="text" name="rating" value="" id="rating" hidden/>
-                            <button type="submit" class="btn btn-primary">Save</button>
+                            <button type="submit" class="btn btn-primary" id="reviewBtn" disabled>Save</button>
                         </form>
                     </div>
                 </div>
