--- a/src/main/resources/templates/infoSection/techTalk.html
+++ b/src/main/resources/templates/infoSection/techTalk.html
@@ -1,16 +1,15 @@
-
 <div class="col-md-12">
     <div class="panel panel-default" id="techtalk-info">
         <div class="panel-heading">
             Tech Talks
             <ul class="pull-right panel-settings panel-button-tab-right">
                 <li class="dropdown">
-                    <a class="pull-right dropdown-toggle"   data-toggle="modal" data-target="#myModal" href="#">
-                    <em class="fas fa-plus"></em>
-                </a>
+                    <a class="pull-right dropdown-toggle" data-toggle="modal" data-target="#myModal" href="#">
+                        <em class="fas fa-plus"></em>
+                    </a>
                 </li>
             </ul>
-         </div>
+        </div>
         <div class="panel-body">
             <table id="techTalk-table" class="table table-striped table-bordered" style="width:100%">
                 <thead>
@@ -23,12 +22,17 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each= "info : ${presentations}">
+                <tr th:each="info : ${presentations}">
                     <td th:text="*{info.title}" th:id="*{info.id}"></td>
                     <td th:text="*{info.date}"></td>
                     <td th:text="*{info.presenter}"></td>
                     <td th:text="*{info.intro}"></td>
-                    <td><a class="pull-right dropdown-toggle"  th:attr="data-myvalue='Review ' + *{info.title}, data-presenter='Presenter: ' + *{info.presenter}, data-date='Date: ' + *{info.date}, data-id=*{info.id}"  data-toggle="modal" data-target="#presentationModal" href="#">View</a></td>
+                    <td><a class="pull-right dropdown-toggle"
+                           th:attr="data-myvalue='Review ' + *{info.title}, data-presenter='Presenter: ' + *{info.presenter}, data-date='Date: ' + *{info.date}, data-id=*{info.id}"
+                           data-toggle="modal" data-target="#presentationModal" href="#">Review</a></td>
+                    <td ><a class="pull-right dropdown-toggle"
+                           th:attr="data-myvalue='Review ' + *{info.title}, data-presenter='Presenter: ' + *{info.presenter}, data-date='Date: ' + *{info.date}, data-id=*{info.id}, data-avg=*{info.avgRating}"
+                           data-toggle="modal" data-target="#reviewModal" href="#" >View</a></td>
                 </tr>
                 </tbody>
             </table>
@@ -36,16 +40,17 @@
     </div>
     <section th:replace="createPresentation"></section>
     <section th:replace="presentationInfo"></section>
+    <section th:replace="review"></section>
 
 
 </div>
 <div class="col-md-12">
-    <div class="panel panel-default" id="techtalk-info">
+    <div class="panel panel-default" id="techtalk-inf">
         <div class="panel-heading">
             Tech Talks
             <ul class="pull-right panel-settings panel-button-tab-right">
                 <li class="dropdown">
-                    <a class="pull-right dropdown-toggle"   data-toggle="modal" data-target="#myModal" href="#">
+                    <a class="pull-right dropdown-toggle" data-toggle="modal" data-target="#myModal" href="#">
                         <em class="fas fa-plus"></em>
                     </a>
                 </li>
@@ -56,17 +61,15 @@
                 <thead>
                 <tr>
                     <th>id</th>
-                    <th>Review</th>
                     <th>Rating</th>
-                    <th>User</th>
+                    <th>Review</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each= "info : ${reviews}">
+                <tr th:each="info : ${reviews}">
                     <td th:text="*{info.idPresentation}"></td>
-                    <td th:text="*{info.comment}"></td>
                     <td th:text="*{info.rating}"></td>
-                    <td th:text="*{info.user}"></td>
+                    <td th:text="*{info.comment}"></td>
                 </tr>
                 </tbody>
             </table>
@@ -79,7 +82,8 @@
 </div>
 <script type="application/javascript">
 
-    $(document).ready(function() {
+
+    $(document).ready(function () {
 
         /* 1. Visualizing things on Hover - See next part for action on click */
         $('#stars li').on('mouseover', function () {
@@ -104,7 +108,6 @@
 
         /* 2. Action to perform on click */
         $('#stars li').on('click', function () {
-            console.log("Hello punk!")
             var onStar = parseInt($(this).data('value'), 10); // The star currently selected
             var stars = $(this).parent().children('li.star');
 
@@ -125,14 +128,14 @@
             else {
                 msg = "We will improve ourselves. You rated this " + ratingValue + " stars.";
             }
-
+            document.getElementById("reviewBtn").disabled = false;
             $('#stars li.selected').last().attr('name', 'rating');
             $('#rating').attr('value', ratingValue)
 
 
         })
 
-        var ATTRIBUTES = ['myvalue', 'presenter', 'date', 'id'];
+        var ATTRIBUTES = ['myvalue', 'presenter', 'date', 'id', 'avg'];
 
         $('[data-toggle="modal"]').on('click', function (e) {
             // convert target (e.g. the button) to jquery object
